.provarCaches/00Df2000001KKNJEA4/objects/Incap311__Service_Request_Change_Event__e.object
<CustomObject>
    <fields>
        <fullName>Incap311__Event__c</fullName>
        <description>The event of sobject for the record is created</description>
        <label>Event</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incap311__Object_Name__c</fullName>
        <description>The sobject Name for which the event is being inserted</description>
        <label>Object Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incap311__Updated_DateTime__c</fullName>
        <label>Updated DateTime</label>
        <type>DateTime</type>
    </fields>
    <label>Service Request Change Event</label>
    <pluralLabel>Service Request Change Events</pluralLabel>
</CustomObject>